Cherry-pick r289686. rdar://problem/88689388

`contain:content` breaks fullscreen
    https://bugs.webkit.org/show_bug.cgi?id=236470
    <rdar://88689388>

    Reviewed by Simon Fraser.

    Source/WebCore:

    Paint/layout containment forms a containing block for fixed positioned block boxes. It makes all fixed
    positioned descendants anchored (contained) to this layout container.
    This patch enables fullscreen boxes break out of this non-ICB based layout scope (this is similar to what we
    do for other, "layout scope changing" properties, see canContainFixedPositionObjects).

    Test: fullscreen/fullscreen-prevented-by-containment.html

    * css/fullscreen.css:
    (:-webkit-full-screen-ancestor:not(iframe)):
    * css/parser/CSSParserContext.cpp:
    (WebCore::CSSParserContext::CSSParserContext):

    LayoutTests:

    * fullscreen/fullscreen-prevented-by-containment-expected.txt: Added.
    * fullscreen/fullscreen-prevented-by-containment.html: Added.

    Canonical link: https://commits.webkit.org/247172@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289686 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.194@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@289755 268f45cc-cd09-0410-ab3c-d52691b4dbfc